more nix debugging
changelog_begin
changelog_end

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -148,7 +148,7 @@ jobs:
     timeoutInMinutes: 360
     pool:
       name: macOS-pool
-      demands: assignment -equals default
+      demands: assignment -equals macos-nix
     variables:
       release_sha: $[ dependencies.check_for_release.outputs['out.release_sha'] ]
       release_tag: $[ coalesce(dependencies.check_for_release.outputs['out.release_tag'], '0.0.0') ]
@@ -247,6 +247,7 @@ jobs:
       - template: ci/report-end.yml
 
   - job: compatibility_macos
+    condition: false
     dependsOn:
       - da_ghc_lib
       - check_for_release
