--- a/compatibility/WORKSPACE
+++ b/compatibility/WORKSPACE
@@ -160,7 +160,7 @@ dev_env_tool(
 
 nixpkgs_package(
     name = "postgresql_nix",
-    attribute_path = "postgresql_9_6",
+    attribute_path = "postgresql_11",
     build_file_content = """
 package(default_visibility = ["//visibility:public"])
 filegroup(
