Add an integration test for daml script dumps
changelog_begin
changelog_end

--- a/daml-script/dump/BUILD.bazel
+++ b/daml-script/dump/BUILD.bazel
@@ -43,3 +43,42 @@ da_scala_test(
         "@maven//:org_typelevel_paiges_core_2_12",
     ],
 )
+
+da_scala_test(
+    name = "integration-tests",
+    srcs = glob(["src/it/scala/**/*.scala"]),
+    data = [
+        "//compiler/damlc",
+        "//daml-script/daml:daml-script.dar",
+        "//ledger/test-common:dar-files",
+    ],
+    resources = glob(["src/test/resources/**/*"]),
+    visibility = ["//visibility:public"],
+    deps = [
+        ":dump",
+        "//ledger/ledger-api-client",
+        "@maven//:org_scalatest_scalatest_2_12",
+        "//ledger/sandbox:sandbox-scala-tests-lib",
+        "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+        #        "//libs-scala/resources-akka",
+        "//ledger-api/testing-utils",
+        "//ledger-api/rs-grpc-bridge",
+        "@maven//:com_typesafe_akka_akka_stream_2_12",
+        "@maven//:com_typesafe_akka_akka_actor_2_12",
+        "//libs-scala/ports",
+        "@maven//:io_grpc_grpc_api",
+        "@maven//:io_grpc_grpc_core",
+        "@maven//:io_grpc_grpc_protobuf",
+        "@maven//:io_grpc_grpc_stub",
+        "//ledger/ledger-api-domain",
+        "@maven//:org_scalaz_scalaz_core_2_12",
+        "//language-support/scala/bindings",
+        "//ledger/sandbox-common",
+        "@maven//:io_netty_netty_handler",
+        "//ledger/ledger-api-auth",
+        "//ledger/ledger-resources",
+        "//libs-scala/resources",
+        "//ledger/test-common",
+        "//bazel_tools/runfiles:scala_runfiles",
+    ],
+)
