--- a/daml-script/dump/BUILD.bazel
+++ b/daml-script/dump/BUILD.bazel
@@ -60,7 +60,10 @@ da_scala_test(
         "@maven//:org_scalatest_scalatest_2_12",
         "//ledger/sandbox:sandbox-scala-tests-lib",
         "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
-        #        "//libs-scala/resources-akka",
+        "//daml-script/runner:script-runner-lib",
+        "//daml-lf/archive:daml_lf_dev_archive_proto_java",
+        "//daml-lf/archive:daml_lf_archive_reader",
+        "//daml-lf/language",
         "//ledger-api/testing-utils",
         "//ledger-api/rs-grpc-bridge",
         "@maven//:com_typesafe_akka_akka_stream_2_12",
