--- a/daml-script/dump/BUILD.bazel
+++ b/daml-script/dump/BUILD.bazel
@@ -56,32 +56,33 @@ da_scala_test(
     visibility = ["//visibility:public"],
     deps = [
         ":dump",
-        "//ledger/ledger-api-client",
-        "@maven//:org_scalatest_scalatest_2_12",
-        "//ledger/sandbox:sandbox-scala-tests-lib",
-        "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
-        "//daml-script/runner:script-runner-lib",
-        "//daml-lf/archive:daml_lf_dev_archive_proto_java",
+        "//bazel_tools/runfiles:scala_runfiles",
         "//daml-lf/archive:daml_lf_archive_reader",
+        "//daml-lf/archive:daml_lf_dev_archive_proto_java",
+        "//daml-lf/interpreter",
         "//daml-lf/language",
-        "//ledger-api/testing-utils",
+        "//daml-script/runner:script-runner-lib",
+        "//language-support/scala/bindings",
         "//ledger-api/rs-grpc-bridge",
-        "@maven//:com_typesafe_akka_akka_stream_2_12",
-        "@maven//:com_typesafe_akka_akka_actor_2_12",
+        "//ledger-api/testing-utils",
+        "//ledger/ledger-api-auth",
+        "//ledger/ledger-api-client",
+        "//ledger/ledger-api-domain",
+        "//ledger/ledger-resources",
+        "//ledger/sandbox:sandbox-scala-tests-lib",
+        "//ledger/sandbox-common",
+        "//ledger/sandbox-common:sandbox-common-scala-tests-lib",
+        "//ledger/test-common",
         "//libs-scala/ports",
+        "//libs-scala/resources",
+        "@maven//:com_typesafe_akka_akka_actor_2_12",
+        "@maven//:com_typesafe_akka_akka_stream_2_12",
         "@maven//:io_grpc_grpc_api",
         "@maven//:io_grpc_grpc_core",
         "@maven//:io_grpc_grpc_protobuf",
         "@maven//:io_grpc_grpc_stub",
-        "//ledger/ledger-api-domain",
-        "@maven//:org_scalaz_scalaz_core_2_12",
-        "//language-support/scala/bindings",
-        "//ledger/sandbox-common",
         "@maven//:io_netty_netty_handler",
-        "//ledger/ledger-api-auth",
-        "//ledger/ledger-resources",
-        "//libs-scala/resources",
-        "//ledger/test-common",
-        "//bazel_tools/runfiles:scala_runfiles",
+        "@maven//:org_scalatest_scalatest_2_12",
+        "@maven//:org_scalaz_scalaz_core_2_12",
     ],
 )
