--- a/daml-script/dump/BUILD.bazel
+++ b/daml-script/dump/BUILD.bazel
@@ -79,6 +79,7 @@ da_scala_test(
         "@maven//:com_typesafe_akka_akka_stream_2_12",
         "@maven//:io_grpc_grpc_api",
         "@maven//:io_netty_netty_handler",
+        "@maven//:io_spray_spray_json_2_12",
         "@maven//:org_scalatest_scalatest_2_12",
         "@maven//:org_scalaz_scalaz_core_2_12",
     ],
