--- a/ledger/participant-integration-api/BUILD.bazel
+++ b/ledger/participant-integration-api/BUILD.bazel
@@ -43,6 +43,7 @@ compile_deps = [
     "//libs-scala/ports",
     "//libs-scala/resources",
     "//libs-scala/resources-akka",
+    "//libs-scala/resources-grpc",
     "//libs-scala/scala-utils",
     "//libs-scala/timer-utils",
     "@maven//:com_google_guava_guava",
@@ -220,6 +221,7 @@ test_deps = [
     "//libs-scala/postgresql-testing",
     "//libs-scala/resources",
     "//libs-scala/resources-akka",
+    "//libs-scala/resources-grpc",
     "//libs-scala/timer-utils",
     "@maven//:ch_qos_logback_logback_classic",
     "@maven//:ch_qos_logback_logback_core",
