--- a/ledger/sandbox-perf/BUILD.bazel
+++ b/ledger/sandbox-perf/BUILD.bazel
@@ -48,6 +48,7 @@ da_scala_library(
         "//libs-scala/postgresql-testing",
         "//libs-scala/resources",
         "//libs-scala/resources-akka",
+        "//libs-scala/resources-grpc",
         "@maven//:ch_qos_logback_logback_classic",
         "@maven//:com_google_protobuf_protobuf_java",
     ],
