--- a/ledger/sandbox/BUILD.bazel
+++ b/ledger/sandbox/BUILD.bazel
@@ -55,6 +55,7 @@ da_scala_library(
         "//libs-scala/ports",
         "//libs-scala/resources",
         "//libs-scala/resources-akka",
+        "//libs-scala/resources-grpc",
         "@maven//:ch_qos_logback_logback_classic",
         "@maven//:com_typesafe_config",
         "@maven//:org_slf4j_slf4j_api",
