--- a/libs-scala/grpc-test-utils/BUILD.bazel
+++ b/libs-scala/grpc-test-utils/BUILD.bazel
@@ -14,12 +14,19 @@ da_scala_library(
         "@maven//:org_scalactic_scalactic",
     ],
     tags = ["maven_coordinates=com.daml:grpc-test-utils:__VERSION__"],
+    versioned_scala_deps = {
+        "2.12": ["@maven//:org_scala_lang_modules_scala_collection_compat"],
+    },
     visibility = [
         "//:__subpackages__",
     ],
     deps = [
+        "//libs-scala/resources",
+        "//libs-scala/resources-grpc",
+        "@maven//:com_google_protobuf_protobuf_java",
         "@maven//:io_grpc_grpc_api",
         "@maven//:io_grpc_grpc_core",
         "@maven//:io_grpc_grpc_services",
+        "@maven//:io_grpc_grpc_stub",
     ],
 )
