ci: use setvar to set variables
My goal here is to investigate the new warning Azure has been showing
for the past few days:

> ##[warning]%25 detected in ##vso command. In March 2021, the agent command parser will be updated to unescape this to %. To opt out of this behavior, set a job level variable DECODE_PERCENTS to false. Setting to true will force this behavior immediately. More information can be found at https://github.com/microsoft/azure-pipelines-agent/blob/master/docs/design/percentEncoding.md

As far as I'm aware we are not deliberately passing in any `%25` in any
of our `vso` commands, so I was a bit surprised by this.

CHANGELOG_BEGIN
CHANGELOG_END

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,14 +70,18 @@ jobs:
     - checkout: self
       persistCredentials: true
     - template: ci/clean-up.yml
+    - template: ci/bash-lib.yml
+      parameters:
+        var_name: bash-lib
     - bash: |
         set -euo pipefail
+        source $(bash-lib)
         if git tag v$(release_tag) $(release_sha); then
           git push origin v$(release_tag)
           mkdir $(Build.StagingDirectory)/release
           mkdir $(Build.StagingDirectory)/artifactory
         else
-          echo "##vso[task.setvariable variable=skip-github]TRUE"
+          setvar skip-github TRUE
         fi
     - task: DownloadPipelineArtifact@0
       inputs:
@@ -261,11 +265,6 @@ jobs:
       eval "$(./dev-env/bin/dade-assist)"
 
       source $(bash_lib)
-
-      setvar() {
-          echo "Setting '$1' to '$2'"
-          echo "##vso[task.setvariable variable=$1;isOutput=true]$2"
-      }
 
       DELAY=1
       while ! curl --fail -I https://repo1.maven.org/maven2/com/daml/ledger-api-test-tool/$(release_tag)/ledger-api-test-tool-$(release_tag).jar; do
