--- a/ci/bash-lib.yml
+++ b/ci/bash-lib.yml
@@ -144,6 +144,7 @@ steps:
     }
     setvar() {
       echo "Setting '$1' to '$2'"
+      echo "vso[task.setvariable variable=$1;isOutput=true]$2"
       echo "##vso[task.setvariable variable=$1;isOutput=true]$2"
     }
 
