--- a/ledger/test-common/BUILD.bazel
+++ b/ledger/test-common/BUILD.bazel
@@ -15,6 +15,7 @@ load(
 )
 load(
     "//daml-lf/language:daml-lf.bzl",
+    "lf_dev_version",
     "lf_stable_version",
 )
 load("@scala_version//:index.bzl", "scala_major_version")
@@ -37,40 +38,42 @@ da_scala_library(
 [
     [
         daml_compile(
-            name = "%s-tests" % test_name,
+            name = "%s-tests%s" % (test_name, target_name),
             srcs = glob(["src/main/daml/%s/*.daml" % test_name]),
             target = target,
             visibility = ["//visibility:public"],
         ),
         dar_to_scala(
-            name = "%s-tests.scala-codegen" % test_name,
-            srcs = [":%s-tests.dar" % test_name],
+            name = "%s-tests%s.scala-codegen" % (test_name, target_name),
+            srcs = [":%s-tests%s.dar" % (test_name, target_name)],
             package_prefix = "com.daml.ledger.test.%s" % test_name,
-            srcjar_out = "%s.scala.srcjar" % test_name,
+            srcjar_out = "%s%s.scala.srcjar" % (test_name, target_name),
             verbosity = 2,
             visibility = ["//visibility:public"],
         ),
         da_scala_library(
-            name = "%s-tests.scala" % test_name,
-            srcs = [":%s-tests.scala-codegen" % test_name],
+            name = "%s-tests%s.scala" % (test_name, target_name),
+            srcs = [":%s-tests%s.scala-codegen" % (test_name, target_name)],
             visibility = ["//visibility:public"],
             deps = [
                 "//language-support/scala/bindings",
             ] + extra_deps,
         ) if scala_major_version == "2.12" else None,
     ]
-    for (test_name, target, extra_deps) in [
+    for (test_name, extra_deps) in [
         (
             "model",
-            lf_stable_version,
             ["@maven//:org_scala_lang_modules_scala_collection_compat_2_12"],
         ),
         (
             "semantic",
-            lf_stable_version,
             ["@maven//:org_scala_lang_modules_scala_collection_compat_2_12"],
         ),
-        ("performance", lf_stable_version, []),
+        ("performance", []),
+    ]
+    for (target, target_name) in [
+        (lf_stable_version, ""),
+        (lf_dev_version, "-dev"),
     ]
 ]
 
@@ -80,6 +83,16 @@ filegroup(
         ":model-tests.dar",
         ":performance-tests.dar",
         ":semantic-tests.dar",
+    ],
+    visibility = ["//visibility:public"],
+)
+
+filegroup(
+    name = "dev-dar-files",
+    srcs = [
+        ":model-tests-dev.dar",
+        ":performance-tests-dev.dar",
+        ":semantic-tests-dev.dar",
     ],
     visibility = ["//visibility:public"],
 )
